<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="CylinderConfig" Id="{a5fb1882-7d31-063a-23e4-5151e21fced4}">
    <Declaration><![CDATA[TYPE CylinderConfig :
STRUCT
	TimeToReachHomePosition : TIME := T#10S;
	TimeToReachWorkPosition : TIME := T#10S;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>