<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="CylinderStatus" Id="{c1c6431e-77ff-0e62-0580-b5148e9ff6d7}">
    <Declaration><![CDATA[TYPE CylinderStatus :
STRUCT
	ActionDescription : STRING(100);	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>