<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="fbCylinder" Id="{fe4e2550-76ec-4019-82bb-e68b2cbe4d49}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK fbCylinder EXTENDS TcoCore.TcoComponent IMPLEMENTS ICylinder
VAR_INPUT
	(*~
		<docu>
			<summary>
				Home position sensor.
			</summary>	
		</docu>
	~*)
	{attribute wpf [Container(Layout.UniformGrid)]}
	{attribute wpf [Group(Layout.GroupBox, "Inputs")]}	
	{attribute addProperty Name "Home position sensor"}
	inAtHomePos : BOOL;
	(*~
		<docu>
			<summary>
				Working position sensor.
			</summary>	
		</docu>
	~*) 
	{attribute addProperty Name "Work position sensor"}
	inAtWorkPos : BOOL; 
END_VAR
VAR_OUTPUT
	(*~
		<docu>
			<summary>
				Move to working home position signal.
			</summary>	
		</docu>
	~*)
	{attribute wpf [Container(Layout.UniformGrid)]}
	{attribute wpf [Group(Layout.GroupBox, "Outputs")]}	
	{attribute addProperty Name "Move to home position actuator"}
	outToHomePos : BOOL;
	(*~
		<docu>
			<summary>
				Move to working posistion signal.
			</summary>	
		</docu>
	~*)
	{attribute addProperty Name "Move to work position actuator"}
	outToWorkPos : BOOL;
END_VAR

VAR	
	{attribute wpf [Container(Layout.UniformGrid)]}
	{attribute addProperty Name "Request move to Home position"}	
	_moveHomeTask : TcoCore.TcoTask(THIS^);
	{attribute addProperty Name "Request move to Work position"}
	_moveWorkTask : TcoCore.TcoTask(THIS^);
	{attribute addProperty Name "Request Stop"}
	_stopTask : TcoCore.TcoTask(THIS^);
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF(_moveHomeTask.Execute()) THEN
	outToHomePos := TRUE;
	outToWorkPos := FALSE; 		
	_moveHomeTask.DoneWhen(inAtHomePos);			
END_IF

IF(_moveWorkTask.Execute()) THEN
	outToWorkPos := TRUE; 
	outToHomePos := FALSE;
	_moveWorkTask.DoneWhen(inAtWorkPos);
END_IF;	 

IF(_stopTask.Execute()) THEN	
	outToWorkPos := FALSE; 
	outToHomePos := FALSE;
	_moveWorkTask.Restore();
	_moveHomeTask.Restore();
	_stopTask.Restore();
	_stopTask.DoneWhen(TRUE);	
END_IF]]></ST>
    </Implementation>
    <Folder Name="_tests" Id="{2cbd4d6b-2a4a-49b8-b437-ed7c5a45b843}" />
    <Method Name="_MoveToHomeTest" Id="{9ef39d14-16a3-4bc8-b330-33d879f1f7f9}" FolderPath="_tests\">
      <Declaration><![CDATA[{attribute 'TcRpcEnable'}
METHOD INTERNAL _MoveToHomeTest : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[_MoveToHomeTest := MoveToHome().Done;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="_MoveToWorkTest" Id="{7ebcdca4-683e-48c8-8052-33f48bfaaa19}" FolderPath="_tests\">
      <Declaration><![CDATA[{attribute 'TcRpcEnable'}
METHOD INTERNAL _MoveToWorkTest : BOOL

]]></Declaration>
      <Implementation>
        <ST><![CDATA[_MoveToWorkTest := MoveToWork().Done;

]]></ST>
      </Implementation>
    </Method>
    <Method Name="_StopTest" Id="{28dff165-f4ab-484d-9c26-93aee0eaf841}" FolderPath="_tests\">
      <Declaration><![CDATA[{attribute 'TcRpcEnable'}
METHOD INTERNAL _StopTest : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[_StopTest := Stop().Done;
]]></ST>
      </Implementation>
    </Method>
    <Property Name="AtHome" Id="{d06903a0-9230-4f9a-9ffc-ed1726b8d4b9}">
      <Declaration><![CDATA[PROPERTY AtHome : bool]]></Declaration>
      <Get Name="Get" Id="{2309dcb2-6c63-44cf-85e0-e6e2754836eb}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[AtHome := inAtHomePos;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="AtWork" Id="{c484892b-8ab6-4a33-a377-7a200a12d81a}">
      <Declaration><![CDATA[PROPERTY AtWork : bool]]></Declaration>
      <Get Name="Get" Id="{b963dd74-98d0-4492-a086-b714bde49f51}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[AtWork := inAtWorkPos;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Manual" Id="{8d280abe-da34-4370-8cca-5bd111ecd38d}">
      <Declaration><![CDATA[METHOD PROTECTED  Manual
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="ManualControl" Id="{94b70f4e-af12-4cab-8a9f-9a3da438ebd4}">
      <Declaration><![CDATA[METHOD PROTECTED  ManualControl

]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="MoveToHome" Id="{40560f4f-3063-47a8-8b62-1f2968f73b89}">
      <Declaration><![CDATA[(*~
	<docu>
		<summary>
			Moves the piston into home position.
		</summary>
		<returns>True when home position sensor is reached.</returns>
	</docu>
~*)
METHOD MoveToHome : TcoCore.ITcoTask]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^._moveHomeTask.Invoke();
MoveToHome := THIS^._moveHomeTask;


]]></ST>
      </Implementation>
    </Method>
    <Method Name="MoveToWork" Id="{d11735f5-ce5f-4a7f-8109-144749721e33}">
      <Declaration><![CDATA[(*~
	<docu>
		<summary>
			Moves the piston into working position.
		</summary>
		<returns>True when working position sensor is reached.</returns>
	</docu>
~*)
METHOD MoveToWork : TcoCore.ITcoTask
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^._moveWorkTask.Invoke();
MoveToWork := THIS^._moveWorkTask;

]]></ST>
      </Implementation>
    </Method>
    <Method Name="Restore" Id="{f1ee2652-c22d-47ae-bd44-a3e6ec474e74}">
      <Declaration><![CDATA[METHOD  Restore : ITcoRestorable


]]></Declaration>
      <Implementation>
        <ST><![CDATA[_moveHomeTask.Restore();
_moveWorkTask.Restore();
_stopTask.Restore();]]></ST>
      </Implementation>
    </Method>
    <Method Name="Stop" Id="{9e32cbb8-ba72-4463-bbd6-9f7b9b0e82cd}">
      <Declaration><![CDATA[METHOD Stop : REFERENCE TO TcoCore.TcoTask

]]></Declaration>
      <Implementation>
        <ST><![CDATA[_stopTask.Invoke();
Stop REF= _stopTask;]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>